@@ -3,6 +3,8 @@
 	* support/regression/tests/bug-3579.c,
 	  support/regression/tests/bug-3606.c:
 	  Fix reads from unitialized memory in regression tests, should fix bug #3583.
+	* support/regression/tests/bug-3642.c:
+	  Regression test for bug #3642 (disabled for now, as the bug is not yet fixed).
 
 2023-10-19 Maarten Brock <sourceforge.brock AT dse.nl>
 
